After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660967 - totem properties page crashes nautilus with SIGFPE
totem properties page crashes nautilus with SIGFPE
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Properties page
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-10-05 08:25 UTC by Andreas Trepczik
Modified: 2011-10-05 11:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace of totem-3.2.0 with totem symbols (4.48 KB, text/plain)
2011-10-05 08:25 UTC, Andreas Trepczik
Details

Description Andreas Trepczik 2011-10-05 08:25:18 UTC
Created attachment 198313 [details]
backtrace of totem-3.2.0 with totem symbols

Under certain conditions, opening the properties window of a video file will crash nautilus with an arithmetic exception.

At this point in time I can not reliably say what causes it. Going by the backtrace, I would suspect it's got something to do with the framerate of the video file. I will try to create and upload a very tiny video file that will demonstrate the crash, if I can find out the cause for it.

Using:
Nautilus 3.2.0
Totem 3.2.0
Arch Linux (x86_64)
Comment 1 Bastien Nocera 2011-10-05 11:57:21 UTC
Fixed in master for GNOME 3.2, thanks for the report!