properties: Fix SIGFPE when framerate isn't available

https://bugzilla.gnome.org/show_bug.cgi?id=660967